ReferralSystem/force-app/main/default/objects/Referral_Staging__c/Referral_Staging__c.object-meta.xml
<CustomObject>
    <label>Referral Staging</label>
    <nameField>
        <displayFormat>Ref-{00000}</displayFormat>
        <label>Referral Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referral Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>