ReferralSystem/force-app/main/default/objects/Referral_Staging__c/fields/Contact_Address_Line2__c.field-meta.xml
<CustomField>
    <fullName>Contact_Address_Line2__c</fullName>
    <label>Contact Address Line2</label>
    <type>TextArea</type>
</CustomField>