ReferralSystem/force-app/main/default/objects/Referral_Staging__c/fields/Contact_Doc_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Doc_Type__c</fullName>
    <label>Contact Doc Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>