ReferralSystem/force-app/main/default/objects/Referral_Staging__c/fields/Contact_State__c.field-meta.xml
<CustomField>
    <fullName>Contact_State__c</fullName>
    <label>Contact State</label>
    <length>200</length>
    <type>Text</type>
</CustomField>