ReferralSystem/force-app/main/default/objects/Referral_Staging__c/fields/Contact_Street__c.field-meta.xml
<CustomField>
    <fullName>Contact_Street__c</fullName>
    <label>Contact Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>