ReferralSystem/force-app/main/default/objects/Referral_Staging__c/fields/Referral_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Referral_Email_Id__c</fullName>
    <label>Referred By (Email)</label>
    <type>Email</type>
</CustomField>