ReferralSystem/force-app/main/default/objects/Referral_Staging__c/fields/Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Referred_By__c</fullName>
    <label>Referred By (Name)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>