ReferralSystem/force-app/main/default/objects/Referral_Staging__c/fields/Requirement_Id__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Id__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Requirement Id</label>
    <referenceTo>Requirements__c</referenceTo>
    <relationshipLabel>Referral Staging</relationshipLabel>
    <relationshipName>Referral_Staging</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>