ReferralSystem/force-app/main/default/objects/Referral_Staging__c/fields/TIN_ECN__c.field-meta.xml
<CustomField>
    <fullName>TIN_ECN__c</fullName>
    <label>TIN / ECN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>