ReferralSystem/force-app/main/default/objects/Referral_Staging__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Zip__c</columns>
    <columns>Revenue_Generated__c</columns>
    <columns>Products_Services_Sold__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Customer_Phone__c</columns>
    <columns>Customer_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>