ReferralSystem/force-app/main/default/objects/Referral_Staging__c/listViews/My_Referral_Staging.listView-meta.xml
<ListView>
    <fullName>My_Referral_Staging</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Products_Services_Sold__c</columns>
    <columns>Referral_Source__c</columns>
    <columns>Referral_Email_Id__c</columns>
    <columns>Referred_By__c</columns>
    <columns>Region__c</columns>
    <columns>Requirement_Id__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Referral Staging</label>
</ListView>